--- a/package.json
+++ b/package.json
@@ -38,134 +38,143 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@hmcts/div-idam-express-middleware": "^6.6.2",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
+    "@babel/core": "7.21.3",
+    "@babel/preset-env": "7.20.2",
+    "@hmcts/div-idam-express-middleware": "6.6.2",
+    "@hmcts/nodejs-healthcheck": "1.8.0",
     "@hmcts/one-per-page": "5.4.0",
-    "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/uk-bank-holidays": "^1.0.1",
-    "accessible-autocomplete": "^2.0.2",
-    "applicationinsights": "^1.7.0",
-    "applicationinsights-native-metrics": "^0.0.7",
+    "@hmcts/properties-volume": "0.0.14",
+    "@hmcts/uk-bank-holidays": "1.0.2",
+    "accessible-autocomplete": "2.0.4",
+    "applicationinsights": "2.5.0",
+    "applicationinsights-native-metrics": "0.0.9",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "babel-loader": "9.1.2",
+    "body-parser": "1.20.2",
+    "chalk": "5.2.0",
+    "clean-webpack-plugin": "4.0.0",
     "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#3.0.2",
-    "compression-webpack-plugin": "^5.0.0",
-    "config": "^3.2.5",
-    "cookies": "^0.7.3",
-    "copy-webpack-plugin": "^6.0.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^3.0.0",
-    "csurf": "^1.10.0",
-    "express": "^4.17.1",
-    "express-nunjucks": "^2.2.3",
-    "express-static-gzip": "^1.1.3",
+    "compression-webpack-plugin": "10.0.0",
+    "config": "3.3.9",
+    "cookies": "0.8.0",
+    "copy-webpack-plugin": "11.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.3",
+    "csurf": "1.11.0",
+    "electron": "^23.1.4",
+    "express": "4.18.2",
+    "express-nunjucks": "2.2.5",
+    "express-static-gzip": "2.1.7",
     "extends-classes": "^1.0.5",
-    "file-loader": "^4.0.0",
-    "form-data": "^2.3.2",
-    "formidable": "^1.2.1",
+    "file-loader": "6.2.0",
+    "form-data": "4.0.0",
+    "formidable": "2.1.1",
     "fs": "^0.0.1-security",
-    "git-rev-sync": "^1.12.0",
-    "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
+    "git-rev-sync": "3.0.2",
     "govuk_template_jinja": "0.26.0",
-    "graceful-fs": "^4.1.15",
+    "govuk-elements-sass": "^3.1.3",
+    "govuk-frontend": "4.5.0",
+    "graceful-fs": "4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "helmet": "^3.18.0",
-    "html-entities": "^1.2.1",
-    "http-status-codes": "^1.3.2",
-    "ioredis": "^4.14.1",
-    "jquery": "^3.6.0",
-    "jquery-modal": "^0.9.1",
-    "js-base64": "^2.5.1",
-    "js-yaml": "^3.6.1",
-    "jsdom": "^16.5.0",
-    "libphonenumber-js": "^1.7.19",
+    "helmet": "6.0.1",
+    "html-entities": "2.3.3",
+    "http-status-codes": "2.2.0",
+    "ioredis": "5.3.1",
+    "jquery": "3.6.4",
+    "jquery-modal": "0.9.2",
+    "js-base64": "3.7.5",
+    "js-yaml": "4.1.0",
+    "jsdom": "21.1.1",
+    "libphonenumber-js": "1.10.24",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "2.7.5",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
-    "nunjucks": "^3.2.0",
+    "node-sass": "8.0.0",
+    "nunjucks": "3.2.3",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "parse-full-name": "^1.2.3",
-    "postcss-loader": "^3.0.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
-    "serve-static": "^1.14.1",
-    "superagent": "^6.1.0",
+    "parse-full-name": "1.2.6",
+    "postcss-loader": "7.1.0",
+    "request": "2.88.2",
+    "request-promise": "4.2.6",
+    "sass-loader": "13.2.1",
+    "serve-static": "1.15.0",
+    "superagent": "8.0.9",
     "superagent-csrf": "^1.0.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "trim-newlines": "^4.0.0",
-    "uuid": "^8.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "terser-webpack-plugin": "5.3.7",
+    "trim-newlines": "5.0.0",
+    "uuid": "9.0.0",
+    "webpack": "5.76.3",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-middleware": "6.0.2",
+    "webpack-merge": "5.8.0",
+    "webpack-node-externals": "3.0.0"
   },
   "devDependencies": {
     "@hmcts/eslint-config": "^1.4.0",
-    "chai": "^4.1.2",
+    "chai": "4.3.7",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
-    "chokidar": "^3.0.1",
-    "codeceptjs": "^2.6.11",
-    "cookie-parser": "^1.4.5",
-    "eslint": "^7.2.0",
-    "eslint-plugin-mocha": "^5.0.0",
-    "mocha": "^6.1.4",
-    "mocha-multi": "^1.1.0",
-    "mocha-param": "^2.0.0",
-    "mochapack": "^2.1.2",
-    "mochawesome": "^4.0.1",
-    "nightmare": "^3.0.2",
-    "nightmare-upload": "^0.1.1",
-    "nock": "^10.0.6",
-    "node-dev": "^4.0.0",
+    "chokidar": "3.5.3",
+    "codeceptjs": "3.4.1",
+    "cookie-parser": "1.4.6",
+    "eslint": "8.36.0",
+    "eslint-plugin-mocha": "10.1.0",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "mocha-param": "2.0.1",
+    "mochapack": "2.1.4",
+    "mochawesome": "7.1.3",
+    "nightmare": "3.0.2",
+    "nightmare-upload": "0.1.1",
+    "nock": "13.3.0",
+    "node-dev": "8.0.0",
     "nyc": "^15.1.0",
-    "pa11y": "^5.1.0",
-    "portscanner": "^2.1.1",
+    "pa11y": "6.2.3",
+    "portscanner": "2.2.0",
     "pre-commit": "^1.2.2",
-    "proxyquire": "^2.0.1",
-    "puppeteer": "^5.4.1",
-    "rewire": "^4.0.1",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.0.0",
-    "sonar-scanner": "^3.0.3",
-    "supertest": "^4.0.2",
-    "webdriverio": "^6.7.3"
+    "proxyquire": "2.1.3",
+    "puppeteer": "19.7.5",
+    "rewire": "6.0.0",
+    "sinon": "15.0.2",
+    "sinon-chai": "3.7.0",
+    "sonar-scanner": "3.1.0",
+    "supertest": "6.3.3",
+    "webdriverio": "8.6.7"
   },
   "resolutions": {
     "moment": "^2.29.4",
     "assign-deep": "1.0.1",
-    "braces": "^2.3.2",
-    "eslint-utils": "^1.4.1",
-    "js-yaml": "3.13.1",
+    "braces": "3.0.2",
+    "eslint-utils": "3.0.0",
     "lodash": "^4.17.21",
-    "minimist": "^1.2.6",
-    "electron": "^9.4.0",
-    "axios": "^0.21.4",
+    "minimist": "1.2.8",
+    "electron": "23.1.4",
+    "axios": "1.3.4",
     "elliptic": "^6.5.4",
-    "hosted-git-info": "^3.0.8",
-    "url-parse": "^1.5.8",
-    "browserslist": "4.17.5",
-    "glob-parent": "^5.1.2",
-    "tar": "^6.1.9",
-    "trim-newlines": "4.0.2",
+    "hosted-git-info": "6.1.1",
+    "url-parse": "1.5.10",
+    "glob-parent": "6.0.2",
+    "tar": "6.1.13",
     "set-value": "^4.1.0",
-    "ansi-regex": "^5.0.1",
-    "json-schema": "0.4.0",
+    "ansi-regex": "6.0.1",
     "shelljs": "^0.8.5",
-    "nanoid": "^3.1.31",
-    "terser": "^4.8.1",
-    "scss-tokenizer": "0.4.3"
+    "nanoid": "4.0.1",
+    "terser": "5.16.6",
+    "scss-tokenizer": "0.4.3",
+    "loader-utils": "3.2.1",
+    "json-schema": "0.4.0",
+    "async": "3.2.4",
+    "qs": "6.11.1",
+    "http-cache-semantics": "4.1.1",
+    "json5": "2.2.3",
+    "minimatch": "7.4.2",
+    "trim-newlines": "5.0.0",
+    "redis": "4.6.5",
+    "cookiejar": "2.1.4",
+    "request": "2.88.2",
+    "decode-uri-component": "0.4.1"
   }
 }
