--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
     "cookies": "^0.7.3",
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
     "css-minimizer-webpack-plugin": "4.2.2",
@@ -101,7 +101,7 @@
     "terser-webpack-plugin": "5.3.7",
     "trim-newlines": "^4.0.0",
     "uuid": "^8.2.0",
-    "webpack": "5.76.2",
+    "webpack": "5.76.3",
     "webpack-cli": "5.0.1",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-merge": "^4.2.2",
@@ -165,6 +165,7 @@
     "loader-utils": "^1.4.2",
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "got": "12.6.0"
   }
 }
