--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "accessible-autocomplete": "^2.0.2",
     "applicationinsights": "^1.7.0",
     "applicationinsights-native-metrics": "^0.0.7",
-    "babel-core": "^4.7.16",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
@@ -75,7 +75,7 @@
     "govuk-frontend": "^3.11.0",
     "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-cli": "^2.3.0",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
@@ -91,7 +91,7 @@
     "mini-css-extract-plugin": "^1.3.0",
     "moment": "^2.29.4",
     "nunjucks": "^3.2.0",
-    "nunjucks-loader": "^3.0.0",
+    "nunjucks-loader": "^2.2.2",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "13.2.1",
@@ -101,8 +101,8 @@
     "terser-webpack-plugin": "5.3.7",
     "trim-newlines": "^4.0.0",
     "uuid": "^8.2.0",
-    "webpack": "4.46.0",
-    "webpack-cli": "5.0.1",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
@@ -122,7 +122,7 @@
     "mocha-param": "^2.0.0",
     "mochapack": "^2.1.2",
     "mochawesome": "^7.1.3",
-    "nightmare": "2.10.0",
+    "nightmare": "^2.8.0",
     "nightmare-upload": "^0.1.1",
     "nock": "^10.0.6",
     "node-dev": "^8.0.0",
