--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/uk-bank-holidays": "^1.0.1",
+    "@npmcli/fs": "^3.1.0",
     "accessible-autocomplete": "^2.0.2",
     "applicationinsights": "^1.7.0",
-    "applicationinsights-native-metrics": "^0.0.7",
+    "applicationinsights-native-metrics": "^0.0.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
@@ -58,6 +59,7 @@
     "config": "^3.2.5",
     "cookies": "^0.7.3",
     "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.29.1",
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
     "css-minimizer-webpack-plugin": "4.2.2",
@@ -68,8 +70,9 @@
     "extends-classes": "^1.0.5",
     "file-loader": "6.2.0",
     "form-data": "^2.3.2",
-    "formidable": "^1.2.1",
+    "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
+    "fsevents": "^2.3.2",
     "git-rev-sync": "^3.0.2",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
@@ -90,17 +93,19 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.0",
     "moment": "^2.29.4",
+    "nan": "^2.17.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^2.2.2",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "13.2.1",
     "serve-static": "^1.14.1",
-    "superagent": "^6.1.0",
+    "superagent": "^8.0.9",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "5.3.7",
     "trim-newlines": "^4.0.0",
-    "uuid": "^8.2.0",
+    "uuid": "^9.0.0",
+    "w3c-hr-time": "^1.0.2",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^3.7.3",
@@ -112,7 +117,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
-    "chokidar": "^3.0.1",
+    "chokidar": "^3.5.3",
     "codeceptjs": "^3.4.1",
     "cookie-parser": "^1.4.5",
     "eslint": "^7.2.0",
@@ -127,11 +132,11 @@
     "nock": "^10.0.6",
     "node-dev": "^8.0.0",
     "nyc": "^15.1.0",
-    "pa11y": "^5.1.0",
+    "pa11y": "^6.2.3",
     "portscanner": "^2.1.1",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.0.1",
-    "puppeteer": "^5.4.1",
+    "puppeteer": "^19.8.0",
     "rewire": "^6.0.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.0.0",
