--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -94,6 +94,7 @@
     "nan": "^2.17.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^2.2.2",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "13.2.1",
