--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "minimatch": "^3.0.5",
     "lodash.template": "^4.5.0",
     "got": "12.6.0",
-    "webpack": "^5.76.3",
+    "webpack": "4.0.0",
     "webpack-cli": "^5.0.1"
   }
 }
