--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "nock": "^10.0.6",
     "node-dev": "^8.0.0",
     "nyc": "^15.1.0",
+    "optimize-css-assets-webpack-plugin": "npm:webpack@4.44.2",
     "pa11y": "^6.2.3",
     "portscanner": "^2.1.1",
     "pre-commit": "^1.2.2",
@@ -170,8 +171,6 @@
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
     "lodash.template": "^4.5.0",
-    "got": "12.6.0",
-    "webpack": "4.0.0",
-    "webpack-cli": "^5.0.1"
+    "got": "12.6.0"
   }
 }
