--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
+    "sass": "^1.60.0",
     "sass-loader": "13.2.1",
     "serve-static": "^1.14.1",
     "superagent": "^8.0.9",
