--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.29.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^3.0.0",
+    "css-loader": "6.7.3",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
