--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "express-nunjucks": "^2.2.3",
     "express-static-gzip": "^1.1.3",
     "extends-classes": "^1.0.5",
-    "file-loader": "6.2.0",
+    "file-loader": "^6.2.0",
     "form-data": "^2.3.2",
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
@@ -104,6 +104,7 @@
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "5.3.7",
     "trim-newlines": "^4.0.0",
+    "uglify-js": "^3.17.4",
     "uuid": "^9.0.0",
     "w3c-hr-time": "^1.0.2",
     "webpack": "^5.76.3",
