--- a/package.json
+++ b/package.json
@@ -38,82 +38,81 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "7.21.3",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-env": "7.20.2",
     "@electron/get": "^2.0.2",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/uk-bank-holidays": "^1.0.1",
+    "@hmcts/nodejs-healthcheck": "1.8.0",
+    "@hmcts/properties-volume": "0.0.14",
+    "@hmcts/uk-bank-holidays": "1.0.2",
     "@npmcli/fs": "^3.1.0",
     "accessible-autocomplete": "2.0.4",
-    "applicationinsights": "^1.7.0",
+    "applicationinsights": "2.5.1",
     "applicationinsights-native-metrics": "^0.0.9",
-    "babel-core": "^4.7.16",
+    "babel-core": "6.26.3",
     "babel-loader": "9.1.2",
-    "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "body-parser": "1.20.2",
+    "chalk": "5.2.0",
+    "clean-webpack-plugin": "4.0.0",
     "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#3.0.2",
-    "compression-webpack-plugin": "^5.0.0",
-    "config": "^3.2.5",
-    "cookies": "^0.7.3",
+    "compression-webpack-plugin": "10.0.0",
+    "config": "3.3.9",
+    "cookies": "0.8.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.29.1",
-    "cross-env": "^5.1.3",
+    "cross-env": "7.0.3",
     "css-loader": "6.7.3",
-    "csurf": "^1.10.0",
-    "express": "^4.17.1",
-    "express-nunjucks": "^2.2.3",
-    "express-static-gzip": "^1.1.3",
+    "express": "4.18.2",
+    "express-nunjucks": "^2.2.5",
+    "express-static-gzip": "2.1.7",
     "extends-classes": "^1.0.5",
     "file-loader": "^6.2.0",
-    "form-data": "^2.3.2",
+    "form-data": "4.0.0",
     "formidable": "^2.1.1",
-    "fs": "^0.0.1-security",
+    "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
+    "govuk-frontend": "4.5.0",
     "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "helmet": "^3.18.0",
-    "html-entities": "^1.2.1",
-    "http-status-codes": "^1.3.2",
-    "ioredis": "^4.14.1",
+    "helmet": "6.0.1",
+    "html-entities": "2.3.3",
+    "http-status-codes": "2.2.0",
+    "ioredis": "5.3.1",
     "jquery": "3.6.4",
-    "jquery-modal": "^0.9.1",
-    "js-base64": "^2.5.1",
-    "jsdom": "^16.5.0",
-    "libphonenumber-js": "^1.7.19",
+    "jquery-modal": "0.9.2",
+    "js-base64": "3.7.5",
+    "jsdom": "21.1.1",
+    "libphonenumber-js": "1.10.24",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^1.3.0",
+    "mini-css-extract-plugin": "2.7.5",
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "parse-full-name": "^1.2.3",
-    "postcss-loader": "^3.0.0",
+    "parse-full-name": "1.2.6",
+    "postcss": "^8.4.21",
+    "postcss-loader": "7.1.0",
     "sass": "^1.60.0",
     "sass-loader": "13.2.2",
-    "serve-static": "^1.14.1",
+    "serve-static": "1.15.0",
     "superagent": "^8.0.9",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "5.3.7",
-    "trim-newlines": "^4.0.0",
+    "tiny-csrf": "^1.1.3",
+    "trim-newlines": "5.0.0",
     "uglify-js": "^3.17.4",
     "uuid": "^9.0.0",
-    "w3c-hr-time": "^1.0.2",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-dev-middleware": "6.0.2",
+    "webpack-merge": "5.8.0",
+    "webpack-node-externals": "3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
     "@hmcts/eslint-config": "^1.4.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -134,7 +133,6 @@
     "nock": "^10.0.6",
     "node-dev": "^8.0.0",
     "nyc": "^15.1.0",
-    "optimize-css-assets-webpack-plugin": "npm:webpack@4.0.0",
     "pa11y": "^6.2.3",
     "portscanner": "^2.1.1",
     "pre-commit": "^1.2.2",
@@ -161,7 +159,6 @@
     "browserslist": "4.21.5",
     "glob-parent": "^5.1.2",
     "tar": "^6.1.9",
-    "trim-newlines": "4.0.2",
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
