--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "accessible-autocomplete": "2.0.4",
     "applicationinsights": "2.5.1",
     "applicationinsights-native-metrics": "^0.0.9",
-    "babel-core": "6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "9.1.2",
     "body-parser": "1.20.2",
     "chalk": "5.2.0",
@@ -74,7 +74,7 @@
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^4.5.0",
     "graceful-fs": "^4.2.11",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-cli": "^2.3.0",
     "helmet": "6.0.1",
     "html-entities": "2.3.3",
@@ -91,7 +91,7 @@
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "nunjucks": "^3.2.3",
-    "nunjucks-loader": "^3.0.0",
+    "nunjucks-loader": "^2.2.2",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
