--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "accessible-autocomplete": "2.0.4",
     "applicationinsights": "2.5.1",
     "applicationinsights-native-metrics": "^0.0.9",
-    "babel-core": "^4.7.16",
+    "babel-core": "^6.26.3",
     "babel-loader": "9.1.2",
     "body-parser": "1.20.2",
     "chalk": "5.2.0",
@@ -70,11 +70,11 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^4.5.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "helmet": "6.0.1",
     "html-entities": "2.3.3",
@@ -114,36 +114,36 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@hmcts/eslint-config": "^1.4.0",
-    "chai": "^4.1.2",
+    "chai": "4.3.7",
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
     "chokidar": "^3.5.3",
     "codeceptjs": "^3.4.1",
-    "cookie-parser": "^1.4.5",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "eslint": "^7.2.0",
-    "eslint-plugin-mocha": "^5.0.0",
+    "cookie-parser": "1.4.6",
+    "css-minimizer-webpack-plugin": "5.0.0",
+    "eslint": "8.36.0",
+    "eslint-plugin-mocha": "10.1.0",
+    "exports-loader": "^4.0.0",
     "mocha": "^10.2.0",
     "mocha-multi": "1.1.7",
-    "mocha-param": "^2.0.0",
-    "mochapack": "^2.1.2",
+    "mocha-param": "2.0.1",
+    "mochapack": "2.1.4",
     "mochawesome": "^7.1.3",
-    "nightmare": "^2.8.0",
-    "nightmare-upload": "^0.1.1",
-    "nock": "^10.0.6",
+    "nightmare": "^3.0.2",
+    "nock": "^13.3.0",
     "node-dev": "^8.0.0",
     "nyc": "^15.1.0",
     "pa11y": "^6.2.3",
-    "portscanner": "^2.1.1",
+    "portscanner": "^2.2.0",
     "pre-commit": "^1.2.2",
-    "proxyquire": "^2.0.1",
+    "proxyquire": "^2.1.3",
     "puppeteer": "^19.8.0",
     "rewire": "^6.0.0",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.0.0",
-    "sonar-scanner": "^3.0.3",
-    "supertest": "^4.0.2",
-    "webdriverio": "^6.7.3"
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0",
+    "sonar-scanner": "^3.1.0",
+    "supertest": "^6.3.3",
+    "webdriverio": "^8.6.9"
   },
   "resolutions": {
     "moment": "^2.29.4",
@@ -170,6 +170,8 @@
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
     "lodash.template": "^4.5.0",
-    "got": "12.6.0"
+    "got": "12.6.0",
+    "nunjucks": "2.0.0",
+    "exports-loader": "0.6.2"
   }
 }
