--- a/package.json
+++ b/package.json
@@ -70,11 +70,11 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^4.5.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "helmet": "6.0.1",
     "html-entities": "2.3.3",
@@ -147,31 +147,31 @@
   "resolutions": {
     "moment": "^2.29.4",
     "assign-deep": "1.0.1",
-    "braces": "^2.3.2",
-    "eslint-utils": "^1.4.1",
+    "braces": "3.0.2",
+    "eslint-utils": "3.0.0",
     "lodash": "^4.17.21",
-    "minimist": "^1.2.6",
-    "axios": "^0.21.4",
+    "minimist": "1.2.8",
+    "axios": "1.3.4",
     "elliptic": "^6.5.4",
-    "hosted-git-info": "^3.0.8",
-    "url-parse": "^1.5.8",
+    "hosted-git-info": "6.1.1",
+    "url-parse": "1.5.10",
     "browserslist": "4.21.5",
-    "glob-parent": "^5.1.2",
-    "tar": "^6.1.9",
+    "glob-parent": "6.0.2",
+    "tar": "6.1.13",
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
     "shelljs": "^0.8.5",
-    "nanoid": "^3.1.31",
-    "terser": "^4.8.1",
+    "nanoid": "4.0.2",
+    "terser": "5.16.8",
     "scss-tokenizer": "0.4.3",
     "loader-utils": "3.2.1",
-    "flat": "^5.0.1",
-    "minimatch": "^3.0.5",
+    "flat": "5.0.2",
+    "minimatch": "7.4.3",
     "lodash.template": "^4.5.0",
     "got": "12.6.0",
-    "nunjucks": "2.0.0",
-    "exports-loader": "0.6.2",
-    "nightmare": "2.3.0"
+    "nunjucks": "3.2.3",
+    "exports-loader": "4.0.0",
+    "nightmare": "3.0.2"
   }
 }
