--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "nunjucks": "^3.2.3",
+    "nunjucks-loader": "^3.0.0",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
