--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mini-css-extract-plugin": "2.7.5",
     "moment": "^2.29.4",
     "nan": "^2.17.0",
+    "node-fetch": "^3.3.1",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "^3.0.0",
     "parse-full-name": "1.2.6",
