--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "nan": "^2.17.0",
     "node-fetch": "^3.3.1",
     "nunjucks": "^3.2.3",
-    "nunjucks-loader": "^2.2.2",
+    "nunjucks-loader": "3.0.0",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
