--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.29.1",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.3",
     "express": "4.18.2",
     "express-nunjucks": "^2.2.5",
     "express-static-gzip": "2.1.7",
@@ -70,9 +69,9 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
+    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -121,6 +120,7 @@
     "chokidar": "^3.5.3",
     "codeceptjs": "^3.4.1",
     "cookie-parser": "1.4.6",
+    "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "5.0.0",
     "eslint": "8.36.0",
     "eslint-plugin-mocha": "10.1.0",
@@ -143,6 +143,7 @@
     "sinon": "^15.0.3",
     "sinon-chai": "^3.7.0",
     "sonar-scanner": "^3.1.0",
+    "style-loader": "^3.3.2",
     "supertest": "^6.3.3",
     "webdriverio": "^8.6.9"
   },
