--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -95,8 +95,7 @@
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
-    "sass": "^1.60.0",
-    "sass-loader": "13.2.2",
+    "sass-loader": "^7.1.0",
     "serve-static": "1.15.0",
     "superagent": "^8.0.9",
     "superagent-csrf": "^1.0.0",
