--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "express-nunjucks": "^2.2.5",
     "express-static-gzip": "2.1.7",
     "extends-classes": "^1.0.5",
-    "file-loader": "^6.2.0",
+    "file-loader": "^4.0.0",
     "form-data": "4.0.0",
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
@@ -90,7 +90,7 @@
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "node-fetch": "^3.3.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "8.0.0",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "3.0.0",
     "parse-full-name": "1.2.6",
