--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "express-nunjucks": "^2.2.5",
     "express-static-gzip": "2.1.7",
     "extends-classes": "^1.0.5",
-    "file-loader": "^4.0.0",
+    "file-loader": "6.2.0",
     "form-data": "4.0.0",
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
