--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "proxyquire": "^2.1.3",
     "puppeteer": "^19.8.0",
     "rewire": "^6.0.0",
+    "sass": "^1.60.0",
     "sinon": "^15.0.3",
     "sinon-chai": "^3.7.0",
     "sonar-scanner": "^3.1.0",
