--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.14.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -90,6 +90,7 @@
     "moment": "^2.29.4",
     "nan": "^2.17.0",
     "node-fetch": "^3.3.1",
+    "node-gyp": "^9.3.1",
     "node-sass": "8.0.0",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "3.0.0",
