--- a/package.json
+++ b/package.json
@@ -127,11 +127,11 @@
     "eslint": "8.36.0",
     "eslint-plugin-mocha": "10.1.0",
     "exports-loader": "^4.0.0",
-    "mocha": "^6.1.4",
+    "mocha": "10.2.0",
     "mocha-multi": "1.1.7",
     "mocha-param": "2.0.1",
     "mochapack": "2.1.4",
-    "mochawesome": "^4.0.1",
+    "mochawesome": "7.1.3",
     "nightmare": "^2.8.0",
     "nock": "^13.3.0",
     "node-dev": "^8.0.0",
