--- a/package.json
+++ b/package.json
@@ -127,10 +127,10 @@
     "eslint": "8.36.0",
     "eslint-plugin-mocha": "10.1.0",
     "exports-loader": "^4.0.0",
-    "mocha": "npm:yargs@17.7.1",
+    "mocha": "10.2.0",
     "mocha-multi": "1.1.7",
     "mocha-param": "2.0.1",
-    "mochapack": "npm:yargs@17.7.1",
+    "mochapack": "2.1.4",
     "mochawesome": "7.1.3",
     "nightmare": "^2.8.0",
     "nock": "^13.3.0",
@@ -178,6 +178,7 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3"
+    "json5": "2.2.3",
+    "yargs": "17.7.1"
   }
 }
