--- a/package.json
+++ b/package.json
@@ -178,7 +178,6 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3",
-    "yargs": "17.7.1"
+    "json5": "2.2.3"
   }
 }
