--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sass-loader": "^13.2.2",
     "serve-static": "1.15.0",
     "superagent": "^8.0.9",
