--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@electron/get": "^2.0.2",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "1.8.0",
+    "@hmcts/one-per-page": "^5.4.0",
     "@hmcts/properties-volume": "0.0.14",
     "@hmcts/uk-bank-holidays": "1.0.2",
     "@npmcli/fs": "^3.1.0",
