--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "accessible-autocomplete": "2.0.4",
     "applicationinsights": "^3.0.0-beta.4",
     "applicationinsights-native-metrics": "^0.0.9",
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "9.1.2",
     "body-parser": "1.20.2",
     "chalk": "2.4.2",
@@ -70,11 +70,11 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
+    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.14.0",
-    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-cli": "^2.3.0",
     "helmet": "6.0.1",
     "html-entities": "2.3.3",
@@ -95,12 +95,12 @@
     "node-gyp": "^9.3.1",
     "node-sass": "8.0.0",
     "nunjucks": "^3.2.3",
-    "nunjucks-loader": "^3.0.0",
+    "nunjucks-loader": "^2.2.2",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "request": "0.0.1",
+    "request-promise": "^0.0.1",
     "sass-loader": "^13.2.2",
     "serve-static": "1.15.0",
     "superagent": "^8.0.9",
