--- a/package.json
+++ b/package.json
@@ -95,12 +95,12 @@
     "node-gyp": "^9.3.1",
     "node-sass": "8.0.0",
     "nunjucks": "^3.2.3",
-    "nunjucks-loader": "^2.2.2",
+    "nunjucks-loader": "^2.4.9",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
-    "request": "0.0.1",
-    "request-promise": "^0.0.1",
+    "request": "2.88.2",
+    "request-promise": "4.2.6",
     "sass-loader": "^13.2.2",
     "serve-static": "1.15.0",
     "superagent": "^8.0.9",
