--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.29.1",
     "cross-env": "7.0.3",
+    "css-loader": "^3.0.0",
+    "csurf": "^1.11.0",
     "express": "4.18.2",
     "express-nunjucks": "^2.2.5",
     "express-static-gzip": "2.1.7",
@@ -68,11 +70,12 @@
     "file-loader": "6.2.0",
     "form-data": "4.0.0",
     "formidable": "^2.1.1",
+    "fs": "^0.0.1-security",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.14.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.3.0",
@@ -83,6 +86,7 @@
     "jquery": "3.6.4",
     "jquery-modal": "0.9.2",
     "js-base64": "3.7.5",
+    "js-yaml": "^4.1.0",
     "jsdom": "21.1.1",
     "libphonenumber-js": "1.10.24",
     "loader-utils": "^3.2.1",
@@ -91,11 +95,13 @@
     "mini-css-extract-plugin": "2.7.5",
     "moment": "^2.29.4",
     "nan": "^2.17.0",
+    "nightmare-upload": "^0.1.1",
     "node-fetch": "^3.3.1",
     "node-gyp": "^9.3.1",
     "node-sass": "8.0.0",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "^2.4.9",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "1.2.6",
     "postcss": "^8.4.21",
     "postcss-loader": "7.1.0",
@@ -117,7 +123,7 @@
     "webpack-node-externals": "3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.21.4",
     "@hmcts/eslint-config": "^1.4.0",
     "chai": "4.3.7",
     "chai-as-promised": "^7.1.1",
@@ -125,7 +131,6 @@
     "chokidar": "^3.5.3",
     "codeceptjs": "^3.4.1",
     "cookie-parser": "1.4.6",
-    "css-loader": "^3.0.0",
     "css-minimizer-webpack-plugin": "5.0.0",
     "eslint": "8.36.0",
     "eslint-plugin-mocha": "10.1.0",
@@ -158,8 +163,10 @@
     "assign-deep": "1.0.1",
     "braces": "3.0.2",
     "eslint-utils": "3.0.0",
+    "js-yaml": "3.13.1",
     "lodash": "^4.17.21",
     "minimist": "1.2.8",
+    "electron": "^9.4.0",
     "axios": "1.3.4",
     "elliptic": "^6.5.4",
     "hosted-git-info": "6.1.1",
@@ -167,6 +174,7 @@
     "browserslist": "4.21.5",
     "glob-parent": "6.0.2",
     "tar": "6.1.13",
+    "trim-newlines": "4.0.2",
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
