--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "js-yaml": "3.13.1",
     "lodash": "^4.17.21",
     "minimist": "1.2.8",
-    "electron": "^9.4.0",
+    "electron": "23.2.1",
     "axios": "1.3.4",
     "elliptic": "^6.5.4",
     "hosted-git-info": "6.1.1",
