--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3"
+    "json5": "2.2.3",
+    "graceful-fs": "4.2.11"
   }
 }
