--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
+    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -90,7 +90,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "8.0.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
