--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "13.2.2",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
     "superagent-csrf": "^1.0.0",
